# GSW-C

./: Makefile.am  configure.ac  gswteos-10.pc.in
